--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ nav a:hover,.btn:hover,button:hover{transform:translateY(-1px)}nav a:active,.btn
   <section class="card">
     <h2>Audio/Class Review</h2>
     <p>Put your <code>.m4a</code> files in an <code>audio/</code> folder. Open <a href="unit5_quick_review.html">Unit 5 Quick Review</a> to auto‑load players.</p>
+    <li><a href="audio.html">Audio Lectures</a></li>
   </section>
 
   <section class="card">
